tests/snapshots/migrated_v1_trace__cargo_run_test_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                  command │ cargo run -- test
                                   parser │ gnu  flags permute
  95: (rule (command "cargo")             │
        (args (if (exact)                 │
                  …                       │
                (positional               │
                 (? "affected")           │
                 (?                       │
                  (or "watch" "run" "r")) │
                 (? "--")                 │
                 (cond                    │
                  ((or "install"          │
                       "uninstall")       │
                   (deny))                │
                  ((or "build"            │
                       "b"                │
                       …                  │
                       "clippy")          │
                   (allow)))              │ → :allow
                 (allow)))))              │

Result

  cargo run -- test

  → :allow

  config: <config-path>
