tests/snapshots/migrated_v1_trace__cargo_test_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                  command │ cargo test
                                   parser │ gnu
  95: (rule (command "cargo")             │
        (args (if (exact)                 │
                  …                       │
                (positional               │
                 (? "affected")           │
                 (?                       │
                  (or "watch" "run" "r")) │
                 (? "--")                 │
                 (cond                    │
                  ((or "install"          │
                       "uninstall")       │
                   (deny))                │
                  ((or "build"            │
                       "b"                │
                       …                  │
                       "clippy")          │
                   (allow)))              │ → :allow
                 (effect :allow)))))      │

Result

  cargo test

  → :allow

  config: <config-path>
