tests/snapshots/migrated_v1_trace__cat_file_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                            command │ cat foo
                             parser │ gnu
  90: (rule (command (or "cat" …))  │
        (allow "Read-only access")) │ → :allow "Read-only access"

Result

  cat foo

  → :allow "Read-only access"

  config: <config-path>
